2004-07-07  Matti Aarnio  <mea@zmailer.org>

	* configure.in:
	    Version 2.99.57.pre2

	* configure.in:
	    New:  --with-resolvlib="-L ... -R ... -lxxx"
	    Allow manual definition of linking-time of possibly
	    esoteric resolver library name, and linking rules.

	* include/libsh.h, libsh/interpret.c, router/daemonsub.c:
	    Moved  traphup()  prototype into  libsh.h, and
	    fixed wait() prototype in interpret.c.

2004-07-06  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/subdaemon-rtr.c:
	    Compiling in Solaris  with Sun CC shows subtle bugs..
	    (of dead code, removed it)

	* proto/cf/server.cf, proto/cf/aliases.cf, proto/cf/rrouter.cf:
	    No more using  $(dequote .. )  function, but using
	    explicite patterns in  ssift  clauses to handle couple
	    forms of quoted localparts.

	* libsh/execute.c, libsh/listutils.c:
	    Found dangerous code deep inside the execute.c handling
	    stream redirections under some esoteric conditions.

	* smtpserver/Makefile.in, router/Makefile.in, snmp/Makefile.in,
	  utils/vacation/Makefile.in, utils/makedb/Makefile.in:
	    Rearranged library specifications so that --generic-lib=
	    parameters will lead the linking (in case -L is used!)

	* libsh/trap.c, router/daemonsub.c:
	    Noticed that in Solaris the master router leaves zombies.
	    This is a bit uncertain attempt at handling that by regularly
	    collecting all zombies, and instantiating processing vectors.
	    Eventually:  wait4(-1 ..) is wrong, correct is:  wait4(0 ..)

	* libsh/trap.c:
	    Nick Briggs reports odd compiler things on Solaris
	    with Sun compilers in strict ANSI mode...  I tried
	    to introduce safe fallbacks.

	* smtpserver/mxverify.c, smtpserver/policytest.c,
	  smtpserver/policytest.h:
	    Hunted down (finally) conditions of when MX testing
	    lets thru something into %-hack

2004-07-01  Matti Aarnio  <mea@zmailer.org>

	* router/db.c:
	    In some situations we leaked db lookup keys into memory.