@@ -529,15 +529,15 @@ static void cfparam(str, size, cfgfilename, linenum)
     /* Reject mail if SPF query result is equal or higher than threshold */
     else if (cistrcmp(name, "spf-threshold") == 0 && param1 /* 1 param */) {
       use_spf=1;
-      if (cistrcmp(param1, "fail")) {
+      if (cistrcmp(param1, "fail") == 0) {
 	spf_threshold=1;	/* relaxed - they say: fail but we accept */
-      } else if (cistrcmp(param1, "softfail")) {
+      } else if (cistrcmp(param1, "softfail") == 0) {
 	spf_threshold=2;	/* default - they don't assume real reject */
-      } else if (cistrcmp(param1, "none")) {
+      } else if (cistrcmp(param1, "none") == 0) {
 	spf_threshold=3;	/* stricter - but allow all who don't publish */
-      } else if (cistrcmp(param1, "neutral")) {
+      } else if (cistrcmp(param1, "neutral") == 0) {
 	spf_threshold=4;	/* draconian - SFP-less won't pass */
-      } else if (cistrcmp(param1, "pass")) {
+      } else if (cistrcmp(param1, "pass") == 0) {
 	spf_threshold=5;	/* extreme - allow only explicit 'pass' */
       } else {
 	type(NULL,0,NULL, "Cfgfile '%s' line %d param %s has bad arg: '%s'",
@@ -628,7 +628,7 @@ readcffile(name)
       cfg_add_bindaddr( NULL, 0, BINDADDR_ALL, 0 );
     }
     bindaddr_set = (bindaddrs != NULL);
-#ifndef HAVE_SPF_ALT_SPF_H
+#if !(defined(HAVE_SPF_ALT_SPF_H) || defined(HAVE_SPF2_SPF_H))
     if (use_spf) {
       type(NULL,0,NULL, "SPF parameters specified but SPF support not compiled in");
     }
